# annorefine

./: .gitignore  Cargo.toml  README.md  build.py  demo_hints.gff  mkdocs.yml  pyproject.toml  sync_version.py
.github/workflows/: ci.yml  docs.yml  pypi.yml  release.yml  test-pypi.yml
docs/: index.md
docs/api/: functions.md  overview.md
docs/guide/: bam2hints.md  installation.md  python.md  utrs.md
python/annorefine/: __init__.py
src/: bam.rs  bam2hints.rs  fasta.rs  gff3.rs  hints_output.rs  lib.rs  logging.rs  main.rs  output.rs  python.rs  refinement.rs  translation.rs  types.rs
src/commands/: bam2hints.rs  mod.rs  utrs.rs
tests/: test_annorefine.py
